init.d/01.setup-resources/manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: nginx
        image: nginx:1.24.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: pages-volume
          mountPath: /usr/share/nginx/html
        resources:
          limits:
            cpu: 200m
            memory: 64Mi
          requests:
            cpu: 50m
            memory: 32Mi
      volumes:
        - name: pages-volume
          configMap:
            name: frontend-pages
