init.d/01.setup-resources/manifests/orb-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: orb-service
spec:
  selector:
    app: orb
  ports:
  - port: 80
