init.d/01.setup-resources/manifests/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        # path: /
        path: /game(/|$)(.*)
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - pathType: Prefix
        path: /cat
        backend:
          service:
            name: cat-service
            port:
              number: 80
      - pathType: Prefix
        path: /orb
        backend:
          service:
            name: orb-service
            port:
              number: 80
